# alpay_ftc

./: Dockerfile  Makefile  docker-compose.yml
.devcontainer/: devcontainer.json
dev_ws/src/alpay_bringup/: CMakeLists.txt  package.xml
dev_ws/src/alpay_bringup/launch/: cartographer.launch.py  controller_manager.launch.py  gazebo.launch.xml  linear_sweep.launch.xml  occupancy_grid.launch.py  robot.launch.xml  sensors.launch.xml  simulation.launch.py  (+1 more)
dev_ws/src/alpay_description/: CMakeLists.txt  package.xml
dev_ws/src/alpay_navigation/: CMakeLists.txt  package.xml
dev_ws/src/diffbot_description/: CMakeLists.txt  package.xml
dev_ws/src/mecabot_description/: CMakeLists.txt  package.xml
dev_ws/src/mecanum_control_go/: CMakeLists.txt  built  cgo-flags.env  go.mod  go.sum  package.xml  readme
dev_ws/src/mecanum_control_go/msgs/: msgs.gen.go
dev_ws/src/mecanum_control_go/msgs/geometry_msgs/msg/: AccelStamped.gen.go  AccelWithCovarianceStamped.gen.go  InertiaStamped.gen.go  PointStamped.gen.go  PolygonStamped.gen.go  PoseArray.gen.go  PoseStamped.gen.go  PoseWithCovarianceStamped.gen.go  QuaternionStamped.gen.go  TransformStamped.gen.go  TwistStamped.gen.go  TwistWithCovarianceStamped.gen.go  Vector3Stamped.gen.go  VelocityStamped.gen.go  WrenchStamped.gen.go  common.gen.go
dev_ws/src/mecanum_control_go/msgs/std_msgs/msg/: Header.gen.go  common.gen.go
dev_ws/src/mecanum_control_go/src/: main.go
dev_ws/src/nfr_component_lib/: CMakeLists.txt  package.xml
dev_ws/src/nfr_odom/: CMakeLists.txt  cgo-flags.env  go.mod  go.sum  package.xml  readme
(+128 files in other folders)
